force-app/main/default/objects/copadoQuality__Functional_Review_Session__c/fields/copadoQuality__Assignee__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Functional_Review_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>