force-app/main/default/objects/copadoQuality__Functional_Review_Session__c/fields/copadoQuality__Functional_Review__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__Functional_Review__c</fullName>
    <label>Functional Review</label>
    <referenceTo>copadoQuality__Functional_Review__c</referenceTo>
    <relationshipLabel>Functional Review Sessions</relationshipLabel>
    <relationshipName>Functional_Review_Sessions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>