force-app/main/default/objects/copadoQuality__Functional_Review_Session__c/fields/copadoQuality__Review_Outcome__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__Review_Outcome__c</fullName>
    <label>Review Outcome</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>